--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="public/images/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <title>What Does This Video Say</title>
   </head>
   <body>
